     * Cleaned up Makefile, finished support for building in a separate
       directory from the source, added a 'dep' target using depend.awk
       from mutt distribution.
     * Fixed problem with CHECKHOST/CHECKHOSTS typos.
     * Added support for using "*" with checkhost support to restrict ALL
       userids from being accessed from that host. (*@x.x.x.x/y.y.y.y)
       
  New in version 3.5:
  
     * Fixed strerror checking in Configure script and util.c for systems
       without strerror, can now use strerror, sys_errlist, perror, or
       just errno.
     * Major documentation overhaul, create all HTML based docs
     * Added option (defaulting to yes) to correctly set the
       PATH_TRANSLATED environment variable.
     * Fixed bug with the configure script and the use_system option. It
       would cause a preprocessor error if the system call was not found.
     * Cleaned up various things with the Configure script
     * Changed file prompting to allow using ~ paths.
       
  New in version 3.4:
  
     * Fixed typo "&" instead of "&&" in setgroups stuff
     * Added cgiwrap.aliases option to rewrite home dirs of users.
     * Moved entire cgiwrap source build tree to CVS, will make tracking
       changes easier.
     * CGIwrap now changes directories to the directory the script is
       located in before executing the script. Before, it always just
       changed to the main CGI directory. This behavior is only different
       if you were using scripts in subdirectories.
     * Changed style of cgiwrap.allow, cgiwrap.deny files to be the same
       as cron's allow/deny files.
       
  New in version 3.3:
  
     * Added support for attaching a label to syslog log messages.
     * Added code to rewrite the PATH_TRANSLATED environment variable.
       
  New in version 3.24:
  
     * Added support for logging to syslog.
       
  New in version 3.23:
  
     * Setgroups was being used no matter what you said in configure -
       fixed