@@ -4,7 +4,7 @@ AC_CONFIG_AUX_DIR(.)
 AC_CANONICAL_SYSTEM
 AC_CONFIG_HEADER(config.h)
 
-VERSION="3.6beta6"
+VERSION="3.6beta8"
 AC_SUBST(VERSION)
 
 AC_PROG_CC
