@@ -27,6 +27,8 @@
                 
         Author's Home Page
                 
+        Mailing List Archive (FindMail)
+                
   User CGI Execution
   
         Account Setup
