@@ -61,6 +61,8 @@ from mutt distribution.
 	<LI>Fixed problem with CHECKHOST/CHECKHOSTS typos.
 	<LI>Added support for using "*" with checkhost support to restrict
 ALL userids from being accessed from that host. (*@x.x.x.x/y.y.y.y)
+	<LI>Made 'no way to change uids' a compile time error with #error
+	<LI>Fixed bug with ALLOWFILE define in util.c.
 </UL>
 
 <P><H3>New in version 3.5:</H3><UL>
